--- a/index.html
+++ b/index.html
@@ -8,32 +8,92 @@
     <script src="js/helper.js"></script>
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
     <meta name="viewport" content="width=device-width">
+
+    <!-- Polymer side Nav -->
+    <script 
+      src="/bower_components/webcomponents.js">
+    </script>
+    <link rel="import" 
+      href="/bower_components/core-toolbar/core-toolbar.html">
+    <link rel="import" 
+      href="/bower_components/core-menu/core-menu.html">
+    <link rel="import" 
+      href="/bower_components/core-item/core-item.html">
+    <link rel="import" 
+      href="/bower_components/core-header-panel/core-header-panel.html">
+    <link rel="import" 
+      href="/bower_components/core-drawer-panel/core-drawer-panel.html">
+    <link rel="import" 
+      href="/bower_components/core-scaffold/core-scaffold.html">
+    <!-- ... -->
+
   </head>
 
   <body unresolved>
-    <div id="main">
-      <div id="header" class="center-content clearfix">
-        <ul id="topContacts" class='flex-box'></ul>
+
+    <!-- Polymer side Nav -->
+
+    <core-scaffold>
+
+      <core-header-panel navigation flex>
+
+        <core-toolbar id="navheader">
+
+          <span>Menu</span>
+
+        </core-toolbar>
+
+        <core-menu>
+
+          <core-item>
+            <a href="#workExperience">Work Experience</a>
+          </core-item>
+
+          <core-item>
+            <a href="#projects">Projects</a>
+          </core-item>
+
+          <core-item>
+            <a href="#education">Education</a>
+          </core-item>
+
+          <core-item>
+            <a href="#mapDiv">Where I Lived and Worked</a>
+          </core-item>
+          
+        </core-menu>
+
+      </core-header-panel>
+      
+      <span tool>Title</span>
+
+      <div class="content">
+          <div id="main">
+            <div tool id="header" class="center-content clearfix">
+              <ul id="topContacts" class='flex-box'></ul>
+            </div>
+            <div style='clear: both;'></div>
+            <div id="workExperience" class='gray'>
+              <h2>Work Experience</h2>
+            </div>
+            <div id="projects">
+              <h2>Projects</h2>
+            </div>
+            <div id="education" class='gray'>
+              <h2>Education</h2>
+            </div>
+            <div id="mapDiv">
+              <h2>Where I've Lived and Worked</h2>
+            </div>
+            <div id="letsConnect" class='dark-gray'>
+              <h2 class='orange center-text'>Let's Connect</h2>
+                <ul id="footerContacts" class="flex-box">
+              </ul>
+            </div>
+          </div>
       </div>
-      <div style='clear: both;'></div>
-      <div id="workExperience" class='gray'>
-        <h2>Work Experience</h2>
-      </div>
-      <div id="projects">
-        <h2>Projects</h2>
-      </div>
-      <div id="education" class='gray'>
-        <h2>Education</h2>
-      </div>
-      <div id="mapDiv">
-        <h2>Where I've Lived and Worked</h2>
-      </div>
-      <div id="letsConnect" class='dark-gray'>
-        <h2 class='orange center-text'>Let's Connect</h2>
-          <ul id="footerContacts" class="flex-box">
-        </ul>
-      </div>
-    </div>
+
+    </core-scaffold>
 
     <script src="js/resumeBuilder.js"></script>
 
