--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
             
             <!-- content -->
 
+          </div>
+
         </core-toolbar>
 
         <core-menu id="navmenuContent">
