--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body>
 
-    <h1>Webpage is under maintenance, sorry for the inconvenience</h1>
+    <h1>Webpage is under maintenance, sorry for the inconvenience.</h1>
 
   </body>
 </html>
